--- a/index.html
+++ b/index.html
@@ -1,125 +1,146 @@
 <!DOCTYPE html>
-<html>
+<!-- ChatGPT: mi scrivi una pagina di ricerca prodotti per un ecommerce scritto in html che usa bootstrap5 -->
+<html lang="en">
 <head>
-	<title>StockY</title>
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>La mia pagina Bootstrap</title>
+  <!-- Collegamento ai file CSS di Bootstrap -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css">
 </head>
 <body>
-	<header>
-		<h1>StockY</h1>
-		<nav>
-			<ul>
-				<li><a href="#">Home</a></li>
-				<li><a href="#">Prodotti</a></li>
-				<li><a href="#">Contatti</a></li>
-        <li><a href="#">Carrello</a></li>
-			</ul>
-		</nav>
-	</header>
+    <header>
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+          <div class="container-fluid">
+            <a class="navbar-brand" href="#">Il mio sito</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+              <ul class="navbar-nav">
+                <li class="nav-item">
+                  <a class="nav-link active" aria-current="page" href="#">Home</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#">Chi siamo</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="prodotti.html">Prodotti</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="carrello.html">Carrello <span style="width: 200px; height:100px; border-radius: 1px; border: 1px solid black; padding: 4px; background-color: dodgerblue; color:white" id="carrello">0</span></a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#">Contatti</a>
+                </li>
+              </ul>
+            </div>
+          </div>
+        </nav>
+      </header>
 
-	<main>
-		<section class="prodotti">
-			<h2>Prodotti in vetrina</h2>
-			<ul>
-				<li>
-					<a href="#">
-						<img src="/img/Air-Jordan-1-Chicago.jpeg" alt="Sneakers Air Jordan">
-						<h3>Jordan 1 Retro High OG</h3>
-						<p>Chicago Lost and Found</p>
-						<span class="prezzo">349,99 €</span>
-						<button class="aggiungi-al-carrello" onclick="addToCart()">Aggiungi al carrello</button>
-					</a>
-				</li>
-				<li>
-					<a href="#">
-						<img src="prodotto2.jpg" alt="Prodotto 2">
-						<h3>Nome prodotto 2</h3>
-						<p>Descrizione prodotto 2</p>
-						<span class="prezzo">29,99 €</span>
-						<button class="aggiungi-al-carrello" onclick="addToCart()">Aggiungi al carrello</button>
-					</a>
-				</li>
-				<li>
-					<a href="#">
-						<img src="prodotto3.jpg" alt="Prodotto 3">
-						<h3>Nome prodotto 3</h3>
-						<p>Descrizione prodotto 3</p>
-						<span class="prezzo">39,99 €</span>
-						<button class="aggiungi-al-carrello" onclick="addToCart()">Aggiungi al carrello</button>
-					</a>
-				</li>
-			</ul>
-		</section>
+    <main class="container my-5">
+        <form>
+            <div class="row mb-3">
+                <label for="inputSearch" class="col-sm-2 col-form-label">Cerca prodotto:</label>
+                <div class="col-sm-8">
+                    <input type="text" class="form-control" id="inputSearch" placeholder="Inserisci il nome del prodotto">
+                </div>
+                <div class="col-sm-2">
+                    <button type="submit" class="btn btn-primary">Cerca</button>
+                </div>
+            </div>
+            <div class="row mb-3">
+                <label for="inputCategory" class="col-sm-2 col-form-label">Categoria:</label>
+                <div class="col-sm-10">
+                    <select class="form-select" id="inputCategory">
+                        <option value="tutte">Tutte le categorie</option>
+                        <option value="elettronica">Elettronica</option>
+                        <option value="abbigliamento">Abbigliamento</option>
+                        <option value="casa">Casa</option>
+                    </select>
+                </div>
+            </div>
+            <div class="row mb-3">
+                <label for="inputPrice" class="col-sm-2 col-form-label">Prezzo massimo:</label>
+                <div class="col-sm-10">
+                    <input type="number" class="form-control" id="inputPrice" placeholder="Inserisci il prezzo massimo">
+                </div>
+            </div>
+        </form>
+        <hr>
+        <div class="row row-cols-1 row-cols-md-3 g-4">
+            <div class="col">
+                <div class="card h-100">
+                  <a href="prodotto.html">
+                    <img src="https://via.placeholder.com/300x200.png" class="card-img-top" alt="...">
+                  </a>
+                    <div class="card-body">
+                        <h5 class="card-title">Jordan 1 Retro High OG</h5>
+                        <p class="card-text">Chicago Lost and Found</p>
+                        <p class="card-text"><strong>Prezzo:</strong> €349,99</p>
+                        <a href="#" class="btn btn-primary">Aggiungi al carrello</a>
+                    </div>                    
+                </div>
+            </div>
+            <div class="col">
+                <div class="card h-100">
+                    <img src="https://via.placeholder.com/300x200.png" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">Adidas Yeezy Boost 350 V2</h5>
+                        <p class="card-text">Zebra (2017/2022)</p>
+                        <p class="card-text"><strong>Prezzo:</strong> €419,99</p>
+                        <a href="#" class="btn btn-primary">Aggiungi al carrello</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col">
+                <div class="card h-100">
+                    <img src="https://via.placeholder.com/300x200.png" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">Prodotto 3</h5>
+                        <p class="card-text">Descrizione prodotto 3.</p>
+                        <p class="card-text"><strong>Prezzo:</strong> €129,99</p>
+                        <a href="#" class="btn btn-primary" onclick="aggiungiAlCarrello()">Aggiungi 1 al carrello</a>
+                        <a href="#" class="btn btn-primary" onclick="rimuoviDalCarrello()">Rimuovi 1 al carrello</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </main>
 
-		<section class="carrello">
-			<h2>Il tuo carrello</h2>
-			<ul id="carrello-lista">
-			</ul>
-			<div class="totale">
-				<span>Totale:</span>
-				<span id="carrello-totale">0,00 €</span>
-			</div>
-			<button class="checkout" onclick="checkout()">Checkout</button>
-		</section>
-	</main>
+    <footer class="bg-dark text-light py-3">
+    <div class="container text-center">
+      <p>&copy; 2023 Il mio sito - Tutti i diritti riservati</p>
+    </div>
+  </footer>
 
-	<footer>
-		
-	<p>&copy; 2023 Il mio e-commerce</p>
-</footer>
+<style>
+  .card-img-top:hover {
+    opacity: 0.5;    
+  }
+</style>
 
 <script>
-	var slideIndex = 1;
-	showSlides(slideIndex);
-
-	function plusSlides(n) {
-		showSlides(slideIndex += n);
-	}
-
-	function showSlides(n) {
-		var i;
-		var slides = document.getElementsByClassName("slideshow");
-		if (n > slides.length) {
-			slideIndex = 1
-		}
-		if (n < 1) {
-			slideIndex = slides.length
-		}
-		for (i = 0; i < slides.length; i++) {
-			slides[i].style.display = "none";
-		}
-		slides[slideIndex - 1].style.display = "block";
-	}
-
-	function addToCart() {
-		alert("Prodotto aggiunto al carrello!");
-		var prodotto = this.parentNode;
-		var nome = prodotto.getElementsByTagName("h3")[0].textContent;
-		var prezzo = parseFloat(prodotto.getElementsByClassName("prezzo")[0].textContent.replace(",", ".").replace(" €", ""));
-		var carrelloLista = document.getElementById("carrello-lista");
-		var carrelloTotale = document.getElementById("carrello-totale");
-		var li = document.createElement("li");
-		var spanNome = document.createElement("span");
-		var spanPrezzo = document.createElement("span");
-		spanNome.textContent = nome;
-		spanPrezzo.textContent = prezzo.toFixed(2) + " €";
-		li.appendChild(spanNome);
-		li.appendChild(spanPrezzo);
-		carrelloLista.appendChild(li);
-		var totale = parseFloat(carrelloTotale.textContent.replace(",", ".").replace(" €", ""));
-		totale += prezzo;
-		carrelloTotale.textContent = totale.toFixed(2) + " €";
-	}
-
-	function checkout() {
-		alert("Grazie per il tuo acquisto!");
-		var carrelloLista = document.getElementById("carrello-lista");
-		var carrelloTotale = document.getElementById("carrello-totale");
-		carrelloLista.innerHTML = "";
-		carrelloTotale.textContent = "0,00 €";
-	}
+function aggiungiAlCarrello() {
+  var carrello = document.getElementById("carrello");
+  var numero = parseInt(carrello.innerHTML);
+  numero++;
+  carrello.innerHTML = numero;
+}
+function rimuoviDalCarrello() {
+  var carrello = document.getElementById("carrello");
+  var numero = parseInt(carrello.innerHTML);
+  numero--;
+  carrello.innerHTML = numero;
+}
+function svuotaCarrello() {
+  var carrello = document.getElementById("carrello");
+  carrello.innerHTML = 0;
+}
 </script>
+
+  <!-- Collegamento ai file JavaScript di Bootstrap -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
