--- a/index.html
+++ b/index.html
@@ -55,9 +55,9 @@
                 <div class="col-sm-10">
                     <select class="form-select" id="inputCategory">
                         <option value="tutte">Tutte le categorie</option>
-                        <option value="elettronica">Elettronica</option>
+                        <option value="sneakers">Sneakers</option>
                         <option value="abbigliamento">Abbigliamento</option>
-                        <option value="casa">Casa</option>
+                        <option value="accessori">Accessori</option>
                     </select>
                 </div>
             </div>
@@ -98,11 +98,10 @@
                 <div class="card h-100">
                     <img src="https://via.placeholder.com/300x200.png" class="card-img-top" alt="...">
                     <div class="card-body">
-                        <h5 class="card-title">Prodotto 3</h5>
-                        <p class="card-text">Descrizione prodotto 3.</p>
-                        <p class="card-text"><strong>Prezzo:</strong> €129,99</p>
-                        <a href="#" class="btn btn-primary" onclick="aggiungiAlCarrello()">Aggiungi 1 al carrello</a>
-                        <a href="#" class="btn btn-primary" onclick="rimuoviDalCarrello()">Rimuovi 1 al carrello</a>
+                        <h5 class="card-title">Nike Air Force 1</h5>
+                        <p class="card-text">Air Force 1 Low '07</p>
+                        <p class="card-text"><strong>Prezzo:</strong> €119,99</p>
+                        <a href="#" class="btn btn-primary">Aggiungi al carrello</a>
                     </div>
                 </div>
             </div>
@@ -111,7 +110,8 @@
 
     <footer class="bg-dark text-light py-3">
     <div class="container text-center">
-      <p>&copy; 2023 Il mio sito - Tutti i diritti riservati</p>
+      <p>&copy; 2023 SNEAKERSITE - Tutti i diritti riservati</p>
+      <p>&copy; @alessandroferrari</p>
     </div>
   </footer>
 
