--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!-- ChatGPT: mi scrivi una pagina di ricerca prodotti per un ecommerce scritto in html che usa bootstrap5 -->
+<!-- Sito realizzato con l'aiuto di ChatGPT richiedendo la crittura di una pagina ecommerce in html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
@@ -12,7 +12,7 @@
     <header>
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
           <div class="container-fluid">
-            <a class="navbar-brand" href="#">Il mio sito</a>
+            <a class="navbar-brand" href="#">SNEAKERSITE</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
             </button>
