--- a/index.html
+++ b/index.html
@@ -111,7 +111,8 @@
     <footer class="bg-dark text-light py-3">
     <div class="container text-center">
       <p>&copy; 2023 SNEAKERSITE - Tutti i diritti riservati</p>
-      <p>&copy; @alessandroferrari</p>
+      <p>info@sneakersite.it - 0321456789 - PI 01152748725</p>
+      <p>@alessandroferrari</p>
     </div>
   </footer>
 
