--- a/index.html
+++ b/index.html
@@ -39,8 +39,10 @@
           </div>
         </nav>
       </header>
+      <center>
       <img src="img/LOGO.png" style="height: 140px; margin-top: 50px">
     </img>
+  </center>
     <main class="container my-5">
         <form>
             <div class="row mb-3">
