--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
     <footer class="bg-dark text-light py-3">
     <div class="container text-center">
       <p>&copy; 2023 SNEAKERSITE - Tutti i diritti riservati</p>
-      <p>info@sneakersite.it - 0321456789 - PI 01152748725</p>
+      <p>info@sneakersite.it - 0321456789 - P.IVA 01152748725</p>
       <p>@alessandroferrari</p>
     </div>
   </footer>
