--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
             <div class="col">
                 <div class="card h-100">
                   <a href="prodotto.html">
-                    <img src="https://via.placeholder.com/300x200.png" class="card-img-top" alt="...">
+                    <img src="img/Air-Jordan-1-Chicago.jpeg" class="card-img-top" alt="...">
                   </a>
                     <div class="card-body">
                         <h5 class="card-title">Jordan 1 Retro High OG</h5>
