--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
             </div>
             <div class="col">
                 <div class="card h-100">
-                    <img src="https://via.placeholder.com/300x200.png" class="card-img-top" alt="...">
+                    <img src="img/Adidas-Yeezy-Boost-350-V2-Zebra-Product-1.jpeg" class="card-img-top" alt="...">
                     <div class="card-body">
                         <h5 class="card-title">Adidas Yeezy Boost 350 V2</h5>
                         <p class="card-text">Zebra (2017/2022)</p>
@@ -100,7 +100,7 @@
             </div>
             <div class="col">
                 <div class="card h-100">
-                    <img src="https://via.placeholder.com/300x200.png" class="card-img-top" alt="...">
+                    <img src="img/Nike-Air-Force-1-Low-White-07_V2-Product.jpeg" class="card-img-top" alt="...">
                     <div class="card-body">
                         <h5 class="card-title">Nike Air Force 1</h5>
                         <p class="card-text">Air Force 1 Low '07</p>
