--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
             <div class="col">
                 <div class="card h-100">
                   <a href="prodotto.html">
-                    <img src="img/Air-Jordan-1-Chicago.jpeg" class="card-img-top" alt="...">
+                    <img src="img/chicago.jpg" class="card-img-top" alt="...">
                   </a>
                     <div class="card-body">
                         <h5 class="card-title">Jordan 1 Retro High OG</h5>
@@ -89,7 +89,7 @@
             </div>
             <div class="col">
                 <div class="card h-100">
-                    <img src="img/Adidas-Yeezy-Boost-350-V2-Zebra-Product-1.jpeg" class="card-img-top" alt="...">
+                    <img src="img/zebra.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
                         <h5 class="card-title">Adidas Yeezy Boost 350 V2</h5>
                         <p class="card-text">Zebra (2017/2022)</p>
@@ -100,7 +100,7 @@
             </div>
             <div class="col">
                 <div class="card h-100">
-                    <img src="img/Nike-Air-Force-1-Low-White-07_V2-Product.jpeg" class="card-img-top" alt="...">
+                    <img src="img/air-force.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
                         <h5 class="card-title">Nike Air Force 1</h5>
                         <p class="card-text">Air Force 1 Low '07</p>
