--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <title>La mia pagina Bootstrap</title>
   <!-- Collegamento ai file CSS di Bootstrap -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
     <header>
@@ -35,6 +36,9 @@
               
                 </li>
               </ul>
+            </div>
+            <div>
+              <i class="fa-solid fa-cart-shopping" style="color: #1389fd;"></i>
             </div>
           </div>
         </nav>
