--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                   <a class="nav-link" href="prodotti.html">Prodotti</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="carrello.html">Carrello <span style="width: 200px; height:100px; border-radius: 1px; border: 1px solid black; padding: 4px; background-color: dodgerblue; color:white" id="carrello">0</span></a>
+                  
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="#">Contatti</a>
@@ -38,6 +38,7 @@
               </ul>
             </div>
             <div>
+              <a class="nav-link" href="carrello.html"><span style="width: 200px; height:100px; border-radius: 1px; border: 1px solid black; padding: 4px; background-color: dodgerblue; color:white" id="carrello">0</span></a>
               <i class="fa-solid fa-cart-shopping" style="color: #1389fd;"></i>
             </div>
           </div>
