--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
             <div class="collapse navbar-collapse" id="navbarNav">
               <ul class="navbar-nav">
                 <li class="nav-item">
-                  <a class="nav-link active" aria-current="page" href="#">Home</a>
+                  <a class="nav-link active" aria-current="page" href="index.html">Home</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#">Chi siamo</a>
+                  <a class="nav-link" href="chisei.html">Chi siamo</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="prodotti.html">Prodotti</a>
@@ -32,7 +32,7 @@
                   
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#">Contatti</a>
+                  <a class="nav-link" href="contatti.html">Contatti</a>
               
                 </li>
               </ul>
