--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                   <a class="nav-link active" aria-current="page" href="index.html">Home</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="chisei.html">Chi siamo</a>
+                  <a class="nav-link" href="chisiamo.html">Chi siamo</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="prodotti.html">Prodotti</a>
