--- a/chisiamo.html
+++ b/chisiamo.html
@@ -20,10 +20,10 @@
             <div class="collapse navbar-collapse" id="navbarNav">
               <ul class="navbar-nav">
                 <li class="nav-item">
-                  <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+                  <a class="nav-link" aria-current="page" href="index.html">Home</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="chisiamo.html">Chi siamo</a>
+                  <a class="nav-link active" href="chisiamo.html">Chi siamo</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="prodotti.html">Prodotti</a>
