--- a/index.html
+++ b/index.html
@@ -136,8 +136,8 @@
   <div class="swiper mySwiper">
     <div class="swiper-wrapper">
       <div class="swiper-slide"><img src="img/chicago.jpg"></div>
-      <div class="swiper-slide">Slide 2</div>
-      <div class="swiper-slide">Slide 3</div>
+      <div class="swiper-slide"><img src="img/zebra.jpg"></div>
+      <div class="swiper-slide"><img src="img/air-force.jpg"></div>
       <div class="swiper-slide">Slide 4</div>
       <div class="swiper-slide">Slide 5</div>
       <div class="swiper-slide">Slide 6</div>
