--- a/index.html
+++ b/index.html
@@ -136,12 +136,12 @@
       <div class="swiper-slide"><img src="img/chicago.jpg"></div>
       <div class="swiper-slide"><img src="img/zebra.jpg"></div>
       <div class="swiper-slide"><img src="img/air-force.jpg"></div>
-      <div class="swiper-slide">Slide 4</div>
-      <div class="swiper-slide">Slide 5</div>
-      <div class="swiper-slide">Slide 6</div>
-      <div class="swiper-slide">Slide 7</div>
-      <div class="swiper-slide">Slide 8</div>
-      <div class="swiper-slide">Slide 9</div>
+      <div class="swiper-slide"><img src="img/air-force.jpg"></div>
+      <div class="swiper-slide"><img src="img/air-force.jpg"></div>
+      <div class="swiper-slide"><img src="img/air-force.jpg"></div>
+      <div class="swiper-slide"><img src="img/air-force.jpg"></div>
+      <div class="swiper-slide"><img src="img/air-force.jpg"></div>
+      <div class="swiper-slide"><img src="img/air-force.jpg"></div>
     </div>
     <div class="swiper-button-next"></div>
     <div class="swiper-button-prev"></div>
