--- a/index.html
+++ b/index.html
@@ -136,12 +136,12 @@
       <div class="swiper-slide"><img src="img/chicago.jpg"></div>
       <div class="swiper-slide"><img src="img/zebra.jpg"></div>
       <div class="swiper-slide"><img src="img/air-force.jpg"></div>
-      <div class="swiper-slide"><img src="img/air-force.jpg"></div>
-      <div class="swiper-slide"><img src="img/air-force.jpg"></div>
-      <div class="swiper-slide"><img src="img/air-force.jpg"></div>
-      <div class="swiper-slide"><img src="img/air-force.jpg"></div>
-      <div class="swiper-slide"><img src="img/air-force.jpg"></div>
-      <div class="swiper-slide"><img src="img/air-force.jpg"></div>
+      <div class="swiper-slide"><img src="img/air_max_1.jpg"></div>
+      <div class="swiper-slide"><img src="img/dunk_low.jpg"></div>
+      <div class="swiper-slide"><img src="img/dunk_high.jpg"></div>
+      <div class="swiper-slide"><img src="img/jordan_4.jpg"></div>
+      <div class="swiper-slide"><img src="img/new_balance.jpg"></div>
+      <div class="swiper-slide"><img src="img/yeezy_rnnr.jpg"></div>
     </div>
     <div class="swiper-button-next"></div>
     <div class="swiper-button-prev"></div>
