--- a/index.html
+++ b/index.html
@@ -187,3 +187,10 @@
 </body>
 
 </html>
+<footer class="bg-dark text-light py-3">
+  <div class="container text-center">
+    <p>&copy; 2023 SNEAKERSITE - Tutti i diritti riservati</p>
+    <p>info@sneakersite - 0321456789 - P.IVA 01234567890</p>
+    <p>@alessandroferrari</p>
+  </div>
+</footer>
