--- a/chisiamo.html
+++ b/chisiamo.html
@@ -51,3 +51,10 @@
       <img src="img/LOGO.png" style="height: 160px; margin-top: 50px; margin-bottom: 50px">
     </img>
   </center>
+  <footer class="bg-dark text-light py-3">
+    <div class="container text-center">
+      <p>&copy; 2023 SNEAKERSITE - Tutti i diritti riservati</p>
+      <p>info@sneakersite - 0321456789 - P.IVA 01234567890</p>
+      <p>@alessandroferrari</p>
+    </div>
+  </footer>
