--- a/prodotti.html
+++ b/prodotti.html
@@ -117,6 +117,90 @@
                     </div>
                 </div>
             </div>
+            <div class="row row-cols-1 row-cols-md-3 g-4">
+              <div class="col">
+                  <div class="card h-100">
+                    <a href="prodotto.html">
+                      <img src="img/air_max_1.jpg" class="card-img-top" alt="...">
+                    </a>
+                      <div class="card-body">
+                          <h5 class="card-title">Jordan 1 Retro High OG</h5>
+                          <p class="card-text">Chicago Lost and Found</p>
+                          <p class="card-text"><strong>Prezzo:</strong> €349,99</p>
+                          <a href="#" class="btn btn-primary">Aggiungi al carrello</a>
+                      </div>                    
+                  </div>
+              </div>
+              <div class="row row-cols-1 row-cols-md-3 g-4">
+                <div class="col">
+                    <div class="card h-100">
+                      <a href="prodotto.html">
+                        <img src="img/dunk_low.jpg" class="card-img-top" alt="...">
+                      </a>
+                        <div class="card-body">
+                            <h5 class="card-title">Jordan 1 Retro High OG</h5>
+                            <p class="card-text">Chicago Lost and Found</p>
+                            <p class="card-text"><strong>Prezzo:</strong> €349,99</p>
+                            <a href="#" class="btn btn-primary">Aggiungi al carrello</a>
+                        </div>                    
+                    </div>
+                </div>
+                <div class="row row-cols-1 row-cols-md-3 g-4">
+                  <div class="col">
+                      <div class="card h-100">
+                        <a href="prodotto.html">
+                          <img src="img/dunk_high.jpg" class="card-img-top" alt="...">
+                        </a>
+                          <div class="card-body">
+                              <h5 class="card-title">Jordan 1 Retro High OG</h5>
+                              <p class="card-text">Chicago Lost and Found</p>
+                              <p class="card-text"><strong>Prezzo:</strong> €349,99</p>
+                              <a href="#" class="btn btn-primary">Aggiungi al carrello</a>
+                          </div>                    
+                      </div>
+                  </div>
+                  <div class="row row-cols-1 row-cols-md-3 g-4">
+                    <div class="col">
+                        <div class="card h-100">
+                          <a href="prodotto.html">
+                            <img src="img/jordan_4.jpg" class="card-img-top" alt="...">
+                          </a>
+                            <div class="card-body">
+                                <h5 class="card-title">Jordan 1 Retro High OG</h5>
+                                <p class="card-text">Chicago Lost and Found</p>
+                                <p class="card-text"><strong>Prezzo:</strong> €349,99</p>
+                                <a href="#" class="btn btn-primary">Aggiungi al carrello</a>
+                            </div>                    
+                        </div>
+                    </div>
+                    <div class="row row-cols-1 row-cols-md-3 g-4">
+                      <div class="col">
+                          <div class="card h-100">
+                            <a href="prodotto.html">
+                              <img src="img/new_balance.jpg" class="card-img-top" alt="...">
+                            </a>
+                              <div class="card-body">
+                                  <h5 class="card-title">Jordan 1 Retro High OG</h5>
+                                  <p class="card-text">Chicago Lost and Found</p>
+                                  <p class="card-text"><strong>Prezzo:</strong> €349,99</p>
+                                  <a href="#" class="btn btn-primary">Aggiungi al carrello</a>
+                              </div>                    
+                          </div>
+                      </div>
+                      <div class="row row-cols-1 row-cols-md-3 g-4">
+                        <div class="col">
+                            <div class="card h-100">
+                              <a href="prodotto.html">
+                                <img src="img/yeezy_rnnr.jpg" class="card-img-top" alt="...">
+                              </a>
+                                <div class="card-body">
+                                    <h5 class="card-title">Adidas Yeezy Foam RNR</h5>
+                                    <p class="card-text">Onyx</p>
+                                    <p class="card-text"><strong>Prezzo:</strong> €249,99</p>
+                                    <a href="#" class="btn btn-primary">Aggiungi al carrello</a>
+                                </div>                    
+                            </div>
+                        </div>
         </div>
     </main>
 
