--- a/prodotti.html
+++ b/prodotti.html
@@ -180,9 +180,9 @@
                               <img src="img/new_balance.jpg" class="card-img-top" alt="...">
                             </a>
                               <div class="card-body">
-                                  <h5 class="card-title">Jordan 1 Retro High OG</h5>
-                                  <p class="card-text">Chicago Lost and Found</p>
-                                  <p class="card-text"><strong>Prezzo:</strong> €349,99</p>
+                                  <h5 class="card-title">New Balance 550</h5>
+                                  <p class="card-text">White Yellow</p>
+                                  <p class="card-text"><strong>Prezzo:</strong> €149,99</p>
                                   <a href="#" class="btn btn-primary">Aggiungi al carrello</a>
                               </div>                    
                           </div>
