--- a/prodotti.html
+++ b/prodotti.html
@@ -166,9 +166,9 @@
                             <img src="img/jordan_4.jpg" class="card-img-top" alt="...">
                           </a>
                             <div class="card-body">
-                                <h5 class="card-title">Jordan 1 Retro High OG</h5>
-                                <p class="card-text">Chicago Lost and Found</p>
-                                <p class="card-text"><strong>Prezzo:</strong> €349,99</p>
+                                <h5 class="card-title">Jordan 4 Retro</h5>
+                                <p class="card-text">Bred</p>
+                                <p class="card-text"><strong>Prezzo:</strong> €399,99</p>
                                 <a href="#" class="btn btn-primary">Aggiungi al carrello</a>
                             </div>                    
                         </div>
