--- a/contatti.html
+++ b/contatti.html
@@ -52,7 +52,7 @@
     </img>
   </center>
   <div class="container text-center">
-    <p>&copy; SNEAKERSITE Milano</p>
+    <p>&copy; SNEAKERSITE Novara</p>
     <p>info@sneakersite - 0321456789</p>
     <p>@alessandroferrari</p>
   </div>
